--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android'
+    id 'kotlin-android-extensions'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -8,7 +11,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.gadshealthteam8"
+        applicationId "com.itzlonelyalpha.gadshealthtips"
         minSdk 23
         targetSdk 32
         versionCode 1
@@ -36,6 +39,22 @@ android {
 }
 
 dependencies {
+
+    //circle
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    //
+    implementation 'com.firebaseui:firebase-ui-storage:7.2.0'
+
+
+    implementation platform('com.google.firebase:firebase-bom:30.3.2')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.google.firebase:firebase-database-ktx'
+    implementation 'com.google.firebase:firebase-storage-ktx'
+    implementation 'com.google.firebase:firebase-firestore-ktx'
+
+    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
