--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,30 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GADSHealthTeam8"
         tools:targetApi="31">
+
+        <activity
+            android:name=".ImageGlideActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.stories.StoryInfoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.speakers.SpeakersInfoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.books.BookInfoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.quote.QuoteInfoActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
+            android:exported="false"
+            android:theme="@style/Theme.GADSHealthTeam8.NoActionBar"
+         />
+
+        <activity
+            android:name=".SplashMainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.GADSHealthTeam8.NoActionBar">
