--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,8 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
-}
+
+    //Splashscreen api dependency
+    def splashScreen_version = "1.0.0-beta02"
+    implementation "androidx.core:core-splashscreen:$splashScreen_version"
+}cho
