--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,28 +12,36 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GADSHealthTeam8"
         tools:targetApi="31">
-
         <activity
-            android:name=".ImageGlideActivity"
+            android:name=".AdminMainActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".AdminLogin"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".ui.nutrition.StoryInfoActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.stories.StoryInfoActivity"
+            android:name=".ui.diseases.SpeakersInfoActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.speakers.SpeakersInfoActivity"
+            android:name=".ui.random.BookInfoActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.books.BookInfoActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ui.quote.QuoteInfoActivity"
+            android:name=".ui.lifestyles.QuoteInfoActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="false"
-            android:theme="@style/Theme.GADSHealthTeam8.NoActionBar"
-         />
-
+            android:theme="@style/Theme.GADSHealthTeam8.NoActionBar" />
         <activity
             android:name=".SplashMainActivity"
             android:exported="true"
